--- a/test/testpage.html
+++ b/test/testpage.html
@@ -9,11 +9,11 @@
 	<script src="/js/mispay-ng.js"></script>
 	<script>mocha.setup('bdd')</script>
 </head>
-<body >
+<body ng-app="TestApp">
 	<div id="mocha"></div>
 	
-	<div style="padding-bottom:20px">Manual Test Upload KYC:
-		<form action="/mispay/kyc" method="post" enctype="multipart/form-data">
+	<div style="padding-bottom:20px" ng-controller="UploadCtr">Manual Test Upload KYC:
+		<form action="/mispay/kyc" method="post" enctype="multipart/form-data" onsubmit="return false;">
 			<input type="text" name="bid" value="5073368378245120">
 			<select name="type">
 				<option value="IDENTITY_PROOF" selected>Proof of identity</option>
@@ -21,23 +21,26 @@
 				<option value="ARTICLES_OF_ASSOCIATION">Articles of association</option>
 				<option value="SHAREHOLDER_DECLARATION">Shareholder declaration</option>
 			</select>
-			<input type="file" name="file">
-			<button>Upload</button>
+			<input type="file" name="file" id="id_file">
+			<button ng-click="submit()">Upload</button>
 		</form>
 	</div>
 	
 <script>
-/*angular.module('TestApp',['mispay'])
+angular.module('TestApp',['mispay'])
 .controller('UploadCtr',['$scope','MisPay', function($scope,MisPay){
 	$scope.bid = '5073368378245120';
 	$scope.type = 'IDENTITY_PROOF';
 	$scope.submit = function(){
-		console.log('$scope.file:',$scope.file);
-		MisPay.KycDocument.upload($scope.bid, $scope.type, $scope.file, function(data){
+		$scope.file = document.querySelector('#id_file');
+		console.log('->',$scope.file);
+		console.log('$scope.file:',$scope.file.files[0]);
+		MisPay.KycDocument.upload($scope.bid, $scope.type, $scope.file.files[0], function(data){
 			console.log('KycDocument.upload return:',data);
 		});
+		return false;
 	};
-}]);*/
+}]);
 
 var expect = chai.expect;
 
